Validation form fixed. Added custom scrollbar.

--- a/style.sass
+++ b/style.sass
@@ -6,6 +6,23 @@ $light-red: hsl(0, 100%, 63%)
 $very-dark-cyan: hsl(192, 100%, 9%)
 $very-pale-blue: hsl(207, 100%, 98%)
 
+::-webkit-scrollbar
+    width: 1em;
+
+::-webkit-scrollbar-track
+    background: transparent;
+    border-radius: 100vw
+    margin-block: .5em
+
+::-webkit-scrollbar-thumb
+    background: $very-dark-cyan;
+    border-radius: 100vw
+    border: 2px solid white
+    transition: background 0.2s ease
+
+::-webkit-scrollbar-thumb:hover
+    background: hsl(192, 100%, 20%);
+ 
 h1,h2
     font-family: "Poppins", sans-serif
 
@@ -14,9 +31,9 @@ body
     display: flex
     flex-direction: column
     align-items: center
-    //padding: 5%
     color: $very-dark-cyan
     font-size: 20px
+    overflow: overlay
 
     .top 
         padding: 5%
@@ -36,7 +53,8 @@ body
 
     
     .container
-        margin-top: 10rem
+        width: 100%
+        margin-top: 8rem
         display: flex
         flex-direction: column
         align-items: center
@@ -88,7 +106,7 @@ body
             display: flex
             width: 100%
             align-items: center
-            justify-content: space-between
+            justify-content: space-around
             padding: 0px 100px 0px 100px
             background-color: $very-pale-blue
             .text
@@ -124,7 +142,7 @@ body
         color: white
         width: 100%
         background-color: $very-dark-cyan
-        padding: 5%
+        padding: 5% 5% 0% 5%
 
         .bot-container
             width: 100%
@@ -209,10 +227,8 @@ body
                         margin-left: 20px
 
         .social
-            padding-left: 5%
             margin-top: 60px
             margin-bottom: 100px
-
             ul
 
                 padding: 0
